--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
 <!-- Contact Form -->
 <div id="contact_form">
- <a name="contact">
- <fieldset> 
- <form class="center" action="mail.php" method="post"">
+ 
+  
+ <form class="center" action="mail.php" method="post">
  
         <input name="name" type="text" id="nameInput" placeholder="Type Name Here">
         <input name="email" type="email" id="emailInput" placeholder="Type Email Here"><br/>
@@ -96,13 +96,13 @@
         <input type="submit" value="Submit" />
         <label id="error"></label>
  </form>
- </fieldset>
+ 
 </div>
 <div id="lowerPattern"></div>
-<div id="footer">
-	<div class="center" id="semiC">
-    <br /><p>Thanks!</p>
-    </div>
+<div class="center" id="footer">
+	<div id="contactJacob"></div>
+	<div class="center" id="semiC"> </div>
+    <div id="contactAlex"></div>
 </div>
 
 </body>
