--- a/index.html
+++ b/index.html
@@ -100,9 +100,12 @@
 </div>
 <div id="lowerPattern"></div>
 <div class="center" id="footer">
-	<div id="contactJacob"></div>
+	<ul class="center" id="inlineBlock">
+		<li id="jacobContact"><p>Jacob Gilbert<br />jgilbert@oberlin.edu<br />617-388-6511</p></li><li id="thankYou"><p>~OR~<br />Thank You!</p></li><li id="alexContact"><p>Alex Katz<br />akatz@oberlin.edu<br />617-893-1070</p></li>
+	</ul>
+    <!--<div id="contactJacob"></div>
 	<div class="center" id="semiC"> </div>
-    <div id="contactAlex"></div>
+    <div id="contactAlex"></div>-->
 </div>
 
 </body>
