Cleaned up css in layout.css

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="coder">CODER</div>
     <div class="center" id="vennImage"></div>
 </div>
-<div id="blue">
+<div id="bios_wrapper">
 	<div class="center" id="bios">
     <div id="jacob">
         <div class="tableChild"> 
@@ -99,7 +99,7 @@
  
 </div>
 <div id="lowerPattern"></div>
-<div class="center" id="footer">
+<div class="center" id="contactInfo_wrapper">
 	<ul class="center" id="inlineBlock">
 		<li id="jacobContact"><p>Jacob Gilbert<br />jgilbert@oberlin.edu<br />617-388-6511</p></li><li id="thankYou"><p>~OR~<br />Thank You!</p></li><li id="alexContact"><p>Alex Katz<br />akatz@oberlin.edu<br />617-893-1070</p></li>
 	</ul>
