Changed Venn to reflect proper div function

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </p>
 </div>
 <div id="band"></div>
-<div class="center" id="venn">
+<div class="center" id="portholes">
 	<img src="css/images/portholesBG.png" width="960" height="163" />
 </div>
 
